force-app/main/default/objects/LMT_CRM_Permission_Sets__mdt/LMT_CRM_Permission_Sets__mdt.object-meta.xml
<CustomObject>
    <description>License Management CRM Permission Sets introduced in 2.0</description>
    <label>LMT CRM Permission Sets</label>
    <pluralLabel>LMT CRM Permission Sets</pluralLabel>
</CustomObject>