force-app/main/default/objects/LMT_CRM_Permission_Sets__mdt/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <label>App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>