force-app/main/default/objects/LMT_CRM_Permission_Sets__mdt/fields/Org_Permission_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Permission_Set_Id__c</fullName>
    <label>Org Permission Set Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>