force-app/main/default/objects/LMT_CRM_Permission_Sets__mdt/fields/Org_Permission_Sets_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Permission_Sets_Name__c</fullName>
    <label>Org Permission Sets Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>