force-app/main/default/objects/LMT_CRM_Permission_Sets__mdt/listViews/All_LMT_CRM_PS.listView-meta.xml
<ListView>
    <fullName>All_LMT_CRM_PS</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>App_Name__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Org_Permission_Set_Id__c</columns>
    <columns>Org_Permission_Sets_Name__c</columns>
    <columns>Permission_Set_License_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All LMT CRM PS</label>
</ListView>